| Bug #5163 | Views: identifiers with umlauts are not handled | ||
|---|---|---|---|
| Submitted: | 23 Aug 2004 1:56 | Modified: | 6 Sep 2004 13:51 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.2-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[1 Sep 2004 21:50]
Oleksandr Byelkin
ChangeSet 1.1743 04/09/01 22:48:59 bell@sanja.is.com.ua +4 -0 system charset (with wich VIEW printed) saved in .frm and restored before parsing view (BUG#5163)
[6 Sep 2004 13:51]
Oleksandr Byelkin
Thank You for bugreport! Bugfix is pushed into server sources repository.

Description: If a base table identifier is 'vü', I can't create a valid view for it. When I try to use the view, I get: ERROR 1355 (HY000): View 'db5.vü' references invalid table(s) or column(s) How to repeat: mysql> create table tü (cü char) engine=innodb; Query OK, 0 rows affected (0.32 sec) mysql> create view vü as select cü from tü; Query OK, 0 rows affected (0.00 sec) mysql> insert into vü values ('ü'); ERROR 1355 (HY000): View 'db5.vü' references invalid table(s) or column(s)