sql/table.h
@@ -224,6 +224,7 @@ typedef struct st_table_list
   LEX_STRING	view_db;		/* save view database */
   LEX_STRING	view_name;		/* save view name */
   LEX_STRING	timestamp;		/* GMT time stamp of last operation */
+  LEX_STRING    syscharset;             /* charset of VIEW query text*/
   ulonglong	file_version;		/* version of file's field set */
   ulonglong     updatable_view;        /* VIEW can be updated */
   ulonglong	revision;		/* revision control number */
